# LEAP-batch-jobs

./: README.md  pyproject.toml
.github/workflows/: run.yml
BATCH_JOBS/sarika-debruyn/mrms-floodnet/: batch.py  config.yml
BATCH_JOBS/sarika-debruyn/mrms_dataset/: batch.py  config.yml  launch_mrms_jobs.py
BATCH_JOBS/sarika-debruyn/publications_scraper/: batch.py  config.yml  leap_scientists.txt
BATCH_JOBS/v_acquaviva/: batch.py  config.yml
batch/: batch.py  config.yml
examples/large_job/: batch.py  config.yml
examples/small_job/: batch.py  config.yml
leap_batch/: monitoring.py
src/leap_batch_jobs/: gcs.py  monitoring.py
