[project]
name = "leap-batch-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask",
    "obstore>=0.9.2",
    "psutil",
    "xarray>=2026.2.0",
    "zarr>=3.1.5",
]

[dependency-groups]
dispatch = [
    "skypilot[gcp]>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"
